fix: requested changes done
1- Comment on contract address
2- pazz-coin logo with live pazz website address

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://develop.dx27hd910sf2y.amplifyapp.com/assets/img/pazzive-coin-dark.png"
+      content="https://paz.fuzion.team/assets/img/pazzive-coin-dark.png"
     />
     <meta property="og:url" content="https://paz.fuzion.team" />
     <title>Pazz</title>
